@startuml
'Direccion of the diagram'
left to right direction
'Used style'
skinparam backgroundColor #F5E6CC
'Classes'
skinparam classBackgroundColor #A7C7E7
skinparam classBorderColor #000000
skinparam shadowing true
skinparam roundcorner 15
'Titles'
skinparam classFontColor #000000
skinparam classFontStyle bold
'Relationships'
skinparam classArrowColor #4CAF50
skinparam classArrowThickness 2
skinparam classArrowFontColor black
skinparam classArrowFontSize 11
skinparam nodesep 20
skinparam ranksep 5

class Booking{
    +id_booking:int
    +total_products:int
    +total_price:double
    +BookingItem:BookingItem[]
}

class BookingItem{
    +id_item_booking:int
    +quantity:int
}

class User {
    +id_user:int
    +name:string
    +username:string
    +email:string
    +password:string
    +phone:string
    +address:string
    +profilePicture:string
    +birthdate:date
    +role:string
}

class Service{
    +id_service:int
    +name:string
    +description:string
    +price:double
    +imageUrl:string
}

class CategoryService{
    +id_service:int
    +name:string
}




Booking "1" -- "N" BookingItem : has >
BookingItem "N" -- "1" Service : contains >

Service -- "1..*" CategoryService

BookingItem -- User


@enduml